--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
+    "react-table": "^7.6.2",
     "reactstrap": "^8.7.1",
     "toastr": "^2.1.4",
     "typescript": "^4.0.3",
