--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
     "react-table": "^7.6.2",
+    "react-toastify": "^6.1.0",
     "reactstrap": "^8.7.1",
     "toastr": "^2.1.4",
     "typescript": "^4.0.3",
